CI: Remove optimize.bat from artifacts

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -36,7 +36,7 @@ after_build:
   - ps: $env:my_version = "$env:APPVEYOR_BUILD_VERSION-$($env:APPVEYOR_REPO_COMMIT.substring(0,7))"
   - set package_name=gaxtapper-%my_version%-%arch%
   - copy "build\%config%\gaxtapper.exe" .
-  - 7z a %package_name%.zip gaxtapper.exe optimize.bat README.md LICENSE.txt
+  - 7z a %package_name%.zip gaxtapper.exe README.md LICENSE.txt
 
 artifacts:
   - path: $(package_name).zip
