Add version scanner

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,6 +66,8 @@ set(HDRS
     src/gaxtapper/gsf_header.hpp
     src/gaxtapper/gsf_writer.hpp
     src/gaxtapper/gax_minigsf_driver_param.hpp
+    src/gaxtapper/gax_song_param.hpp
+    src/gaxtapper/gax_version.hpp
     src/gaxtapper/gax_driver.hpp
     src/gaxtapper/gax_driver_param.hpp
     src/gaxtapper/psf_writer.hpp
