Add tentative GAX V2 song scanner

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,7 +53,10 @@ set(SRCS
     src/gaxtapper/gsf_writer.cpp
     src/gaxtapper/gax_driver.cpp
     src/gaxtapper/gax_music_entry.cpp
+    src/gaxtapper/gax_music_entry_v2.cpp
+    src/gaxtapper/gax_song_header_v2.cpp
     src/gaxtapper/gax_song_header_v3.cpp
+    src/gaxtapper/gax_sound_handler_v2.cpp
     src/gaxtapper/gax_version.cpp
     src/gaxtapper/psf_writer.cpp
     src/gaxtapper/gaxtapper.cpp
@@ -70,9 +73,12 @@ set(HDRS
     src/gaxtapper/gsf_writer.hpp
     src/gaxtapper/gax_minigsf_driver_param.hpp
     src/gaxtapper/gax_music_entry.hpp
+    src/gaxtapper/gax_music_entry_v2.hpp
     src/gaxtapper/gax_song_info_text.hpp
     src/gaxtapper/gax_song_param.hpp
+    src/gaxtapper/gax_song_header_v2.hpp
     src/gaxtapper/gax_song_header_v3.hpp
+    src/gaxtapper/gax_sound_handler_v2.hpp
     src/gaxtapper/gax_version.hpp
     src/gaxtapper/gax_driver.hpp
     src/gaxtapper/gax_driver_param.hpp
